security_group/main.tf
resource "aws_security_group" "sg-group" {
  name        = "${var.cluster_id}-cluster"
  vpc_id      = var.vpc_id
  description = "Cluster communication with worker & master nodes"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = var.resource_tags
}
